--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -2857,7 +2857,7 @@ cannot be successfully @samp{lt_dlclose}d.
 @end deftypefun
 
 @deftypefun int lt_dlisresident (lt_dlhandle @var{handle})
-Check whether a particular module has be marked as resident, returning 1
+Check whether a particular module has been marked as resident, returning 1
 if it has or 0 otherwise.  If there is an error while executing this
 function, return -1 and set an error message for retrieval with
 @code{lt_dlerror}.
