--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-12-16  Sascha Schumann <sascha@schumann.cx>
 
+	* libtool.m4: Accept darwin as an alias for rhapsody.
+	* ltmain.in: ditto.
+	
 	* libtool.m4 (AC_DEPLIBS_CHECK_METHOD): Use the HPUX 10.20
 	methods to check for library dependencies on HPUX 11.
 
